<resources>
    <string name="app_name">Begory</string>
    <string name="no_internet_connection">لا يوجد انترنت لديك</string>

    <string name="title">مدرسة السمائيين بكنائس السيدة العذراء ومارجرجس وأبي سيفين بحارة زويلة</string>
    <string name="start">ابدا</string>
    <string name="account_key">ادخل الكود السرى</string>
    <string name="username">الأسم </string>
    <string name="password">كلمه المرور</string>
    <string name="login">تسجيل دخول</string>
    <string name="fill_data">من فضلك ادخل البيانات</string>
    <string name="fill_mobiledata">من فضلك ادخل رقم تلفون صحيح</string>
    <string name="fill_fixedPassword"> كلمة السر يجب ان تكون اكبر من 8 احرف </string>
    <string name="fill_passworddata"> كلمة السر غير صحيحة </string>
    <string name="fill_name_level">من فضلك ادخل الاسم و اختر مرحلة المخدوم </string>
    <string name="fill__level">من فضلك اختر المرحلة </string>
    <string name="fill__password">من فضلك ادخل كلمه المرور </string>
    <string name="fill_cost_level">من فضلك يجب ادخال الاسم و السعر و المرحلة  </string>

    <string name="user_exist">هذا الحساب مسجل قم بالتعديل </string>
    <string name="settingType">settingType</string>
    <string name="userType">userType</string>
    <string name="account_deactivated">الحساب متوقف</string>
    <string name="account_not_found">الحساب غير مسجل من قبل</string>
    <string name="student_not_found">لا يوجد مخدومين في هذة المرحلة نرجو الاضافة</string>

    <string name="error">حدث خطا</string>
    <string name="wrong_mobile">رقم الهاتف غير صحيح</string>
    <string name="wrong_password">كلمة المرور او المرحلة غير صحيحه</string>

    <string name="m_add_student">إضافة مخدوم</string>
    <string name="m_edit_student">تعديل مخدوم</string>
    <string name="m_add_subadmin">إضافة خادم</string>
    <string name="m_edit_subadmin">تعديل خادم</string>
    <string name="m_add_admin">إضافة امين خدمة</string>
    <string name="m_edit_admin">تعديل امين خدمة</string>

    <string name="m_add_attendance">إضافة حضور</string>
    <string name="m_levels_attendance">كشف حضور</string>
    <string name="m_Gifts_booked">ليست الحجوزات</string>
    <string name="m_Add_Bonus">أضافة بونص </string>

    <string name="m_add_Gift">إضافة هدية</string>
    <string name="m_edit_Gift">تعديل هدية</string>
    <string name="m_delete_Gift">حذف هدية</string>

    <string name="m_add_results">إضافة نتائج المرحلة</string>
    <string name="m_show_results">عرض نتائج المرحلة</string>

    <string name="m_student_attendance">كشف مخدوم</string>
    <string name="m_student_list">قائمة المخدومين</string>
    <string name="m_student_generate_card">إصدار كود</string>
    <string name="m_signout">تسجيل خروج</string>

    <string name="add_image">اضف صورة</string>

    <string name="add">اضف</string>
    <string name="check">تعديل</string>

    <string name="save_pdf">حفظ PDF</string>
    <string name="saved_pdf">تم حفظ PDF</string>
    <string name="or">او</string>
    <string name="read_code">قراءة الكود</string>

    <string name="name">الاسم</string>
    <string name="kodas">القداس</string>
    <string name="attend">حضور</string>
    <string name="a3traf">اعتراف</string>
    <string name="tnawel">تناول</string>
    <string name="shamas">شماس</string>

    <string name="save">حفظ</string>
    <string name="choose_name">اختر الاسم</string>
    <string name="mobile">رقم الهاتف</string>
    <string name="mobile_family">رقم هاتف ولى الأمر</string>
    <string name="address">العنوان</string>
    <string name="date">التاريخ</string>
    <string name="admin_mission">صلاحيات الأدمن</string>
    <string name="add_directly">إضافة بعد قراءة الكود مباشرتا</string>
    <string name="update_levels">تعديل المراحل</string>

    <string name="id_found">كود المخدوم  موجود من قبل</string>
    <string name="added">تمت الإضافة</string>
    <string name="edited">تم التعديل</string>
    <string name="deleted">تم الحذف</string>

    <string name="year">السنة</string>
    <string name="choose_level">اختر المرحلة</string>
    <string name="choose_date">اختر التاريخ</string>

    <string name="deactive">إيقاف</string>
    <string name="activate">تفعيل</string>
    <string name="image_saved">تم حفظ الكود</string>
    <string name="choose_term">برجاء اختيار الترم اولا</string>

    <string name="a_lev_KG">حضور مرحلة حضانة</string>
    <string name="a_lev_1">حضور مرحلة أولى</string>
    <string name="a_lev_2">حضور مرحلة ثانية</string>
    <string name="a_lev_3">حضور مرحلة ثالثة</string>
    <string name="a_lev_4">حضور مرحلة رابعة</string>
    <string name="a_lev_5">حضور مرحلة خامسة</string>
    <string name="a_lev_6">حضور مرحلة سادسة</string>
    <string name="a_lev_preparatory">حضور مرحلة أعدادى</string>
    <string name="a_lev_secondary">حضور مرحلة ثانوى </string>
    <string name="a_lev_college">حضور مرحلة جامعي </string>
    <string name="a_lev_Grad">حضور مرحلة خريجين </string>
    <string name="a_lev_Augustine"> مرحلة اغسطينوس </string>
    <string name="a_lev_Servant"> مرحلة خدام </string>

    <string name="lev_KG"> مرحلة حضانة</string>
    <string name="lev_1"> مرحلة أولى</string>
    <string name="lev_2"> مرحلة ثانية</string>
    <string name="lev_3"> مرحلة ثالثة</string>
    <string name="lev_4"> مرحلة رابعة</string>
    <string name="lev_5"> مرحلة خامسة</string>
    <string name="lev_6"> مرحلة سادسة</string>
    <string name="lev_preparatory"> مرحلة أعدادى</string>
    <string name="lev_secondary"> مرحلة ثانوى </string>
    <string name="lev_college"> مرحلة جامعي </string>
    <string name="lev_Grad"> مرحلة خريجين </string>
    <string name="lev_Augustine"> مرحلة اغسطينوس </string>
    <string name="lev_Servant"> مرحلة خدام </string>

    <string name="term1_sub1">الحان ترم 1</string>
    <string name="term1_sub2">قبطي</string>

<!--    <string name="term2_sub1">الحان ترم 2</string>-->
<!--    <string name="term2_sub2">طقوس</string>-->

<!--    <string name="term3_sub1">الحان ترم 3</string>-->
<!--    <string name="term3_sub2">محفوظات</string>-->

    <string name="fear">ض</string>
    <string name="acceptable">ل</string>
    <string name="good">ج</string>
    <string name="very_good">ج.ج</string>
    <string name="excellent">م</string>

    <string name="total_grade">تقدير عام</string>

    <string name="t_fear">ضعيف</string>
    <string name="t_acceptable">مقبول</string>
    <string name="t_good">جيد</string>
    <string name="t_very_good">جيد جدا</string>
    <string name="t_excellent">أمتياز</string>

    //title
    <string name="title_shop">معرض</string>
    <string name="title_booked">عربة التسوق</string>

    <string name="title_profile">الملف الشخصي</string>
    <string name="title_settings">الأعدادات</string>
    <string name="title_attendance">الحضور</string>
    <string name="title_notifications">الأشعارات</string>
    <string name="no_student">لا يوجد مخدومين ..نرجوا اضافتهم اولا</string>
    <string name="no_gift">لا يوجد عروض هدايا حاليا</string>
    <string name="no_booking_gift">لا يوجد حجوزات حاليا</string>
    <string name="available_points">نقاط متاحه</string>
    <string name="book_now">تأكيد الحجز</string>
    <string name="book_now2">تأكيد </string>

    <string name="book">احجز</string>
    <string name="booked">محجوز</string>
    <string name="cancel_booking">الغاء الحجز</string>
    <string name="booked_success">تم الحجز</string>
    <string name="points_not_enough">عفوا النقاط غير كافية</string>
    <string name="point">نقطة</string>
    <string name="todo">TODO</string>
</resources>
