<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:title="@string/title_shop"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/navigation_attendance"
        android:title="@string/title_attendance"
        android:icon="@drawable/ic_dashboard"/>

    <item
        android:id="@+id/navigation_notifications"
        android:title="@string/title_notifications"
        android:icon="@drawable/ic_notification"/>

    <item
        android:id="@+id/navigation_settings"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/navigation_profile"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_profile"/>

</menu>