<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_shop">

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.attendance.myproject.begory.presentationLayer.main.shop.ShopFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_shop_to_navigation_attendance"
            app:destination="@id/navigation_attendance" />
    </fragment>

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.attendance.myproject.begory.presentationLayer.main.attendence.AttendanceFragment"
        android:label="@string/title_attendance"
        tools:layout="@layout/fragment_attendance" >
        <action
            android:id="@+id/action_navigation_attendance_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.attendance.myproject.begory.presentationLayer.main.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.attendance.myproject.begory.presentationLayer.main.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_navigation_settings_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.attendance.myproject.begory.presentationLayer.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>