<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect_dialog_box"
    tools:context=".activites.AddStudentActivity">

    <TextView
        android:id="@+id/d_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="center"
        android:text="@string/m_add_attendance"
        android:textSize="24sp"
        android:background="@color/primaryColor"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal|top"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar_black"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/d_title"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/choose_level"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/sp_levels"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/rect_white_box"/>

        <EditText
            android:id="@+id/et_student_id"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/rect_white_box"
            android:hint="@string/id"
            android:imeActionLabel="@string/name"
            android:imeOptions="actionNext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="#3F3F3F"
            android:textColorHint="#3F3F3F"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center"
            android:text="@string/or"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_is_add_direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="right"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:buttonTint="@color/primaryLightColor"
            android:text="@string/add_directly"/>

        <Button
            android:id="@+id/btn_read_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_white_selector"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/read_code"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/rect_white_box"
            android:hint="@string/date"
            android:imeActionLabel="@string/date"
            android:imeOptions="actionNext"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textColor="#3F3F3F"
            android:textColorHint="#3F3F3F"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_white_selector"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>