<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="showLevelAttendViewModel"
            type="com.attendance.myproject.begory.presentationLayer.main.setting.showTakedAttendance.ShowLevelAttendViewModel"
            />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/p1"
            android:background="@color/black"
            android:scaleType="fitXY"
            android:adjustViewBounds="true" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:visibility="@{showLevelAttendViewModel.dataLoading ? View.VISIBLE: View.GONE  }"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/choose_level"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/sp_levels"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rect_white_box"
                tools:setOnItemSelectedListener="@{showLevelAttendViewModel.spinnerListener}"
                />

<!--            <LinearLayout-->
<!--                android:id="@+id/rg_terms"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_margin="12dp"-->
<!--                android:layout_gravity="center_horizontal">-->


<!--                <androidx.appcompat.widget.AppCompatCheckBox-->
<!--                    android:id="@+id/cb_term2"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="ترم 2" />-->

<!--                <androidx.appcompat.widget.AppCompatCheckBox-->
<!--                    android:id="@+id/cb_term1"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="ترم 1" />-->


<!--            </LinearLayout>-->



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="#aaffffff"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_a3traf"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/a3traf"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                    <TextView
                        android:id="@+id/tv_tnawel"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/tnawel"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                    <TextView
                        android:id="@+id/tv_kodas"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/kodas"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                    <TextView
                        android:id="@+id/tv_attend"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/attend"
                        android:gravity="center"
                        android:padding="4dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="12sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_attendance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutAnimation="@anim/grid_layout_animation_from_bottom" />

        </LinearLayout>


    </RelativeLayout>
</layout>